--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
 <head>
   <title>Mango Time</title>
+  <style>
+    body {
+      background-color: #0b0c10; /* qara fon */
+      color: #00ffcc; /* neon yaşıl */
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      padding-top: 100px;
+    }
+    h1 {
+      color: #ff6600; /* narıncı başlıq */
+      font-size: 50px;
+      text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 20px #ff6600;
+      animation: flicker 1.5s infinite alternate;
+    }
+    @keyframes flicker {
+      0% { opacity: 1; }
+      50% { opacity: 0.6; }
+      100% { opacity: 1; }
+    }
+    p {
+      font-size: 20px;
+      margin-top: 20px;
+    }
+    a.button {
+      display:inline-block;
+      padding:15px 30px;
+      background:#ff6600;
+      color:#fff;
+      text-decoration:none;
+      font-size:20px;
+      border-radius:10px;
+      margin-top:30px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to the Mango Time 🚀</h1>
-  <p>Discover the future of technology with Mango Time 🚀</p>
+  <h1>Welcome to Mango Time 🚀</h1>
+  <p>Discover the future of technology with us 🌟</p>
+  <p>Join our journey to innovate and lead the future.</p>
+  <a href="#" class="button">Join Us</a>
 </body>
 </html>
