--- a/index.html
+++ b/index.html
@@ -4,43 +4,53 @@
   <title>Mango Time</title>
   <style>
     body {
-      background-color: #0b0c10; /* qara fon */
-      color: #00ffcc; /* neon yaşıl */
+      background: linear-gradient(135deg, #d4af37, #f5deb3); /* qızılımsı gradient */
+      color: #000000;
       font-family: 'Arial', sans-serif;
       text-align: center;
       padding-top: 100px;
     }
     h1 {
-      color: #ff6600; /* narıncı başlıq */
-      font-size: 50px;
-      text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 20px #ff6600;
+      color: #ff6600;
+      font-size: 60px; /* böyük başlıq */
+      text-shadow: 0 0 10px #ff6600, 0 0 20px #ff6600;
       animation: flicker 1.5s infinite alternate;
     }
     @keyframes flicker {
       0% { opacity: 1; }
-      50% { opacity: 0.6; }
+      50% { opacity: 0.7; }
       100% { opacity: 1; }
     }
     p {
-      font-size: 20px;
+      font-size: 25px; /* böyüdülmüş paraqraf */
       margin-top: 20px;
     }
     a.button {
       display:inline-block;
-      padding:15px 30px;
+      padding:15px 40px;
       background:#ff6600;
       color:#fff;
       text-decoration:none;
-      font-size:20px;
+      font-size:25px;
       border-radius:10px;
       margin-top:30px;
+      transition: all 0.3s;
+    }
+    a.button:hover {
+      background:#ff9900;
+      transform: scale(1.05);
+    }
+    .credit {
+      font-size: 18px;
+      margin-top: 40px;
+      color:#333;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to Mango Time 🚀</h1>
   <p>Discover the future of technology with us 🌟</p>
-  <p>Join our journey to innovate and lead the future.</p>
-  <a href="#" class="button">Join Us</a>
+  <a href="about.html" class="button">Join Us</a>
+  <p class="credit">Created by HSJAZE</p>
 </body>
 </html>
