Update styles and buttons in index.html

--- a/index.html
+++ b/index.html
@@ -4,53 +4,52 @@
   <title>Mango Time</title>
   <style>
     body {
-      background: linear-gradient(135deg, #d4af37, #f5deb3); /* qızılımsı gradient */
-      color: #000000;
-      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #d6b25e, #f3e2b3); /* soft golden */
+      color: #000;
+      font-family: Arial, sans-serif;
       text-align: center;
-      padding-top: 100px;
+      padding-top: 90px;
     }
     h1 {
-      color: #ff6600;
-      font-size: 60px; /* böyük başlıq */
-      text-shadow: 0 0 10px #ff6600, 0 0 20px #ff6600;
-      animation: flicker 1.5s infinite alternate;
-    }
-    @keyframes flicker {
-      0% { opacity: 1; }
-      50% { opacity: 0.7; }
-      100% { opacity: 1; }
+      font-size: 60px;
+      color: #ff7a00;
+      text-shadow: 0 0 12px rgba(255,122,0,0.6);
     }
     p {
-      font-size: 25px; /* böyüdülmüş paraqraf */
+      font-size: 26px;
       margin-top: 20px;
     }
-    a.button {
-      display:inline-block;
-      padding:15px 40px;
-      background:#ff6600;
-      color:#fff;
-      text-decoration:none;
-      font-size:25px;
-      border-radius:10px;
-      margin-top:30px;
-      transition: all 0.3s;
+    .btn {
+      display: inline-block;
+      margin: 15px;
+      padding: 15px 40px;
+      font-size: 22px;
+      color: #fff;
+      background: #ff7a00;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: 0.3s;
     }
-    a.button:hover {
-      background:#ff9900;
+    .btn:hover {
+      background: #ff9a2f;
       transform: scale(1.05);
     }
     .credit {
+      margin-top: 45px;
       font-size: 18px;
-      margin-top: 40px;
-      color:#333;
+      color: #333;
     }
   </style>
 </head>
 <body>
+
   <h1>Welcome to Mango Time 🚀</h1>
-  <p>Discover the future of technology with us 🌟</p>
-  <a href="about.html" class="button">Join Us</a>
+  <p>Discover the future of technology</p>
+
+  <a href="about.html" class="btn">About</a>
+  <a href="vision.html" class="btn">Vision</a>
+
   <p class="credit">Created by HSJAZE</p>
+
 </body>
 </html>
