--- a/about.html
+++ b/about.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Mango Time</title>
+  <title>About – Mango Time</title>
   <style>
     body {
-      background-color: #fff8dc; /* açıq qızılı / bej ton */
-      color: #000;
-      font-family: 'Arial', sans-serif;
-      padding: 50px;
-      line-height: 1.6;
+      background: #fffaf0;
+      font-family: Arial, sans-serif;
       text-align: center;
+      padding: 60px;
+      color: #000;
     }
     h1 {
       font-size: 50px;
       color: #d4af37;
-      margin-bottom: 30px;
     }
     p {
       font-size: 22px;
-      margin-bottom: 20px;
+      max-width: 800px;
+      margin: 20px auto;
+      line-height: 1.6;
     }
-    a.button {
-      display:inline-block;
-      padding:12px 30px;
-      background:#ff6600;
-      color:#fff;
-      text-decoration:none;
-      font-size:20px;
-      border-radius:8px;
-      margin-top:30px;
-      transition: all 0.3s;
+    .btn {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 12px 35px;
+      font-size: 20px;
+      background: #ff7a00;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: 0.3s;
     }
-    a.button:hover {
-      background:#ff9900;
+    .btn:hover {
+      background: #ff9a2f;
       transform: scale(1.05);
     }
   </style>
 </head>
 <body>
+
   <h1>About Mango Time</h1>
-  <p>The Mango Time company was founded on December 23, 2025 by Abraham Abasov (HSJAZE).</p>
-  <p>Our main goal is to become a major technology company and create our own AI.</p>
-  <p>We aim to achieve big things and innovate for the future.</p>
-  <a href="index.html" class="button">Back to Home</a>
+
+  <p>
+    The Mango Time company was founded on December 23, 2025 by Abraham Abasov (HSJAZE).
+    Our main goal is to become a major technology company and create our own AI.
+    We aim to build powerful innovations and achieve great things in the future.
+  </p>
+
+  <a href="index.html" class="btn">Home</a>
+
 </body>
 </html>
