--- a/about.html
+++ b/about.html
@@ -2,24 +2,28 @@
 <html>
 <head>
   <title>About – Mango Time</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background: #fffaf0;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 60px;
+      padding: 60px 20px;
       color: #000;
     }
+
     h1 {
-      font-size: 50px;
+      font-size: 48px;
       color: #d4af37;
     }
+
     p {
       font-size: 22px;
-      max-width: 800px;
-      margin: 20px auto;
+      max-width: 850px;
+      margin: 25px auto;
       line-height: 1.6;
     }
+
     .btn {
       display: inline-block;
       margin-top: 30px;
@@ -31,6 +35,7 @@
       border-radius: 8px;
       transition: 0.3s;
     }
+
     .btn:hover {
       background: #ff9a2f;
       transform: scale(1.05);
@@ -42,7 +47,7 @@
   <h1>About Mango Time</h1>
 
   <p>
-    The Mango Time company was founded on December 23, 2025 by Abraham Abasov (HSJAZE).
+    The Mango Time company was founded on December 23, 2025 by Abraham hsjaze.
     Our main goal is to become a major technology company and create our own AI.
     We aim to build powerful innovations and achieve great things in the future.
   </p>
