--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <style>
     body {
       margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #d6b25e, #f3e2b3);
       font-family: Arial, sans-serif;
+      background: #0b0c10; /* black background */
+      color: #f0f0f0; /* bright text */
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
+      height: 100vh;
+      padding: 20px;
     }
 
     .container {
@@ -22,14 +24,13 @@
     h1 {
       font-size: clamp(42px, 6vw, 72px);
       color: #ff7a00;
-      text-shadow: 0 0 12px rgba(255,122,0,0.6);
+      text-shadow: 0 0 12px rgba(255,122,0,0.7);
       margin-bottom: 20px;
     }
 
     p {
       font-size: clamp(20px, 3vw, 30px);
       margin-bottom: 40px;
-      color: #000;
     }
 
     .btn {
@@ -52,11 +53,53 @@
     .credit {
       margin-top: 45px;
       font-size: 16px;
-      color: #333;
+      color: #f0f0f0;
+    }
+
+    /* Sticky header */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 30px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      z-index: 1000;
+    }
+
+    header h2 {
+      margin: 0;
+      font-size: 28px;
+      color: #ff7a00;
+    }
+
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #f0f0f0;
+      font-size: 18px;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #ff7a00;
     }
   </style>
 </head>
 <body>
+
+  <header>
+    <h2>Mango Time</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="vision.html">Vision</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
   <div class="container">
     <h1>Welcome to Mango Time 🚀</h1>
