--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
   <style>
     body {
       margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #f0e5c2, #d6b25e); /* soft gold */
       font-family: Arial, sans-serif;
+      background: #0b0c10; /* black background */
+      color: #f0f0f0; /* bright text */
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
+      height: 100vh;
       padding: 20px;
-      color: #000;
     }
 
     .container {
@@ -24,7 +24,7 @@
     h1 {
       font-size: clamp(42px, 6vw, 72px);
       color: #ff7a00;
-      text-shadow: 0 0 12px rgba(255,122,0,0.6);
+      text-shadow: 0 0 12px rgba(255,122,0,0.7);
       margin-bottom: 30px;
     }
 
@@ -50,9 +50,51 @@
       background: #ff9a2f;
       transform: scale(1.05);
     }
+
+    /* Sticky header */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 30px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      z-index: 1000;
+    }
+
+    header h2 {
+      margin: 0;
+      font-size: 28px;
+      color: #ff7a00;
+    }
+
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #f0f0f0;
+      font-size: 18px;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #ff7a00;
+    }
   </style>
 </head>
 <body>
+
+  <header>
+    <h2>Mango Time</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="vision.html">Vision</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
   <div class="container">
     <h1>About Mango Time</h1>
