Refactor styles and update credit text in index.html
Updated styles and text in index.html for improved layout and readability.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <title>Mango Time</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0b0c10; /* black background */
-      color: #f0f0f0; /* bright text */
+      background: #0b0c10;
+      color: #f0f0f0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -52,8 +53,9 @@
 
     .credit {
       margin-top: 45px;
-      font-size: 16px;
+      font-size: 22px;
       color: #f0f0f0;
+      font-family: 'Permanent Marker', cursive;
     }
 
     /* Sticky header */
@@ -65,22 +67,23 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 30px;
+      padding: 8px 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       z-index: 1000;
     }
 
     header h2 {
       margin: 0;
-      font-size: 28px;
+      font-size: 22px; /* balacalaşdırıldı */
       color: #ff7a00;
+      text-shadow: 0 0 6px #ff7a00, 0 0 10px #ff9a2f, 0 0 14px #ffd700;
     }
 
     nav a {
-      margin-left: 20px;
+      margin-left: 15px; /* biraz sıxlaşdırıldı */
       text-decoration: none;
       color: #f0f0f0;
-      font-size: 18px;
+      font-size: 16px; /* biraz balacalaşdırıldı */
       transition: 0.3s;
     }
 
@@ -109,7 +112,7 @@
     <a href="vision.html" class="btn">Vision</a>
     <a href="contact.html" class="btn">Contact</a>
 
-    <div class="credit">hsjaze</div>
+    <div class="credit">Create hsjaze</div>
   </div>
 
 </body>
