Refactor index.html for styling and structure updates

--- a/index.html
+++ b/index.html
@@ -3,29 +3,78 @@
 <head>
   <title>Mango Time</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0b0c10;
-      color: #f0f0f0;
+      background: #000;
+      color: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       height: 100vh;
+      text-align: center;
       padding: 20px;
     }
 
+    /* HEADER */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 6px 18px;
+      z-index: 1000;
+    }
+
+    header h2 {
+      margin: 0;
+      font-size: 20px;
+      color: #ffd700;
+      animation: neon 1.8s infinite alternate;
+    }
+
+    @keyframes neon {
+      0% {
+        text-shadow: 0 0 5px #ffd700;
+        opacity: 0.7;
+      }
+      100% {
+        text-shadow:
+          0 0 8px #ffd700,
+          0 0 16px #ffb700,
+          0 0 28px #ff9f00;
+        opacity: 1;
+      }
+    }
+
+    nav {
+      display: flex;
+      gap: 14px;
+    }
+
+    nav a {
+      color: #f5f5f5;
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+    nav a:hover {
+      color: #ffd700;
+    }
+
+    /* CONTENT */
     .container {
       max-width: 90%;
     }
 
     h1 {
       font-size: clamp(42px, 6vw, 72px);
-      color: #ff7a00;
-      text-shadow: 0 0 12px rgba(255,122,0,0.7);
+      color: #ffd700;
       margin-bottom: 20px;
     }
 
@@ -39,81 +88,48 @@
       margin: 10px;
       padding: 14px 36px;
       font-size: 20px;
-      color: #fff;
-      background: #ff7a00;
-      text-decoration: none;
+      color: #000;
+      background: #ffd700;
       border-radius: 10px;
+      text-decoration: none;
       transition: 0.3s;
     }
 
     .btn:hover {
-      background: #ff9a2f;
+      background: #ffea70;
       transform: scale(1.05);
     }
 
     .credit {
-      margin-top: 45px;
-      font-size: 22px;
-      color: #f0f0f0;
-      font-family: 'Permanent Marker', cursive;
-    }
-
-    /* Sticky header */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      z-index: 1000;
-    }
-
-    header h2 {
-      margin: 0;
-      font-size: 22px; /* balacalaşdırıldı */
-      color: #ff7a00;
-      text-shadow: 0 0 6px #ff7a00, 0 0 10px #ff9a2f, 0 0 14px #ffd700;
-    }
-
-    nav a {
-      margin-left: 15px; /* biraz sıxlaşdırıldı */
-      text-decoration: none;
-      color: #f0f0f0;
-      font-size: 16px; /* biraz balacalaşdırıldı */
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff7a00;
+      margin-top: 40px;
+      font-size: 18px;
+      opacity: 0.8;
     }
   </style>
 </head>
+
 <body>
 
-  <header>
-    <h2>Mango Time</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="vision.html">Vision</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+<header>
+  <h2>Mango Time</h2>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="vision.html">Vision</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <div class="container">
-    <h1>Welcome to Mango Time 🚀</h1>
-    <p>Discover the future of technology</p>
+<div class="container">
+  <h1>Welcome to Mango Time 🚀</h1>
+  <p>Discover the future of technology</p>
 
-    <a href="about.html" class="btn">About</a>
-    <a href="vision.html" class="btn">Vision</a>
-    <a href="contact.html" class="btn">Contact</a>
+  <a href="about.html" class="btn">About</a>
+  <a href="vision.html" class="btn">Vision</a>
+  <a href="contact.html" class="btn">Contact</a>
 
-    <div class="credit">Create hsjaze</div>
-  </div>
+  <div class="credit">Created by hsjaze</div>
+</div>
 
 </body>
 </html>
