--- a/vision.html
+++ b/vision.html
@@ -3,19 +3,61 @@
 <head>
   <title>Vision – Mango Time</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0b0c10;
-      color: #f0f0f0;
+      background: #000;
+      color: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       height: 100vh;
+      text-align: center;
       padding: 20px;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 6px 18px;
+    }
+
+    header h2 {
+      font-size: 20px;
+      color: #ffd700;
+      animation: neon 1.8s infinite alternate;
+    }
+
+    @keyframes neon {
+      from { text-shadow: 0 0 6px #ffd700; }
+      to {
+        text-shadow:
+          0 0 10px #ffd700,
+          0 0 20px #ffb700,
+          0 0 35px #ff9f00;
+      }
+    }
+
+    nav {
+      display: flex;
+      gap: 14px;
+    }
+
+    nav a {
+      color: #f5f5f5;
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+    nav a:hover {
+      color: #ffd700;
     }
 
     .container {
@@ -23,101 +65,49 @@
     }
 
     h1 {
-      font-size: clamp(42px, 6vw, 72px);
-      color: #ff7a00;
+      font-size: clamp(48px, 6vw, 72px);
+      color: #ffd700;
       margin-bottom: 30px;
     }
 
     h2 {
       font-size: clamp(28px, 4vw, 36px);
-      color: #f0c36d;
-      margin-top: 30px;
+      margin-top: 25px;
+      color: #ffdd88;
     }
 
     p {
-      font-size: clamp(18px, 3vw, 28px);
+      font-size: clamp(18px, 3vw, 26px);
       line-height: 1.6;
-      margin: 15px 0;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 14px 36px;
-      font-size: 20px;
-      background: #ff7a00;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 10px;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #ff9a2f;
-      transform: scale(1.05);
-    }
-
-    /* Sticky header */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 20px; /* balacalaşdırıldı */
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      z-index: 1000;
-    }
-
-    header h2 {
-      margin: 0;
-      font-size: 22px; /* balacalaşdırıldı */
-      color: #ff7a00;
-      text-shadow: 0 0 6px #ff7a00, 0 0 10px #ff9a2f, 0 0 14px #ffd700;
-    }
-
-    nav a {
-      margin-left: 15px;
-      text-decoration: none;
-      color: #f0f0f0;
-      font-size: 16px; /* balacalaşdırıldı */
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff7a00;
     }
   </style>
 </head>
+
 <body>
 
-  <header>
-    <h2>Mango Time</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="vision.html">Vision</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+<header>
+  <h2>Mango Time</h2>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="vision.html">Vision</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <div class="container">
-    <h1>Vision</h1>
+<div class="container">
+  <h1>Vision</h1>
 
-    <h2>Mission</h2>
-    <p>
-      Our mission is to grow into a global technology company and develop our own artificial intelligence systems.
-    </p>
+  <h2>Mission</h2>
+  <p>
+    Our mission is to become a global technology company and build our own artificial intelligence systems.
+  </p>
 
-    <h2>What We Are Building</h2>
-    <p>
-      AI research, smart automation tools, and future-oriented digital products.
-    </p>
-
-    <a href="index.html" class="btn">Home</a>
-  </div>
+  <h2>Future Goals</h2>
+  <p>
+    Creating innovative AI products, smart automation tools, and future-oriented digital solutions.
+  </p>
+</div>
 
 </body>
 </html>
