--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Mango Time</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,127 +10,58 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #000;
-      color: #f5f5f5;
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       text-align: center;
-      padding: 20px;
-    }
-
-    /* HEADER */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 6px 18px;
-      z-index: 1000;
-    }
-
-    header h2 {
-      margin: 0;
-      font-size: 20px;
-      color: #ffd700;
-      animation: neon 1.8s infinite alternate;
-    }
-
-    @keyframes neon {
-      0% {
-        text-shadow: 0 0 5px #ffd700;
-        opacity: 0.7;
-      }
-      100% {
-        text-shadow:
-          0 0 8px #ffd700,
-          0 0 16px #ffb700,
-          0 0 28px #ff9f00;
-        opacity: 1;
-      }
-    }
-
-    nav {
-      display: flex;
-      gap: 14px;
-    }
-
-    nav a {
-      color: #f5f5f5;
-      text-decoration: none;
-      font-size: 15px;
-    }
-
-    nav a:hover {
-      color: #ffd700;
-    }
-
-    /* CONTENT */
-    .container {
-      max-width: 90%;
     }
 
     h1 {
-      font-size: clamp(42px, 6vw, 72px);
+      font-size: 56px;
       color: #ffd700;
-      margin-bottom: 20px;
     }
 
     p {
-      font-size: clamp(20px, 3vw, 30px);
-      margin-bottom: 40px;
+      font-size: 24px;
+      margin-top: 15px;
     }
 
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 14px 36px;
-      font-size: 20px;
-      color: #000;
-      background: #ffd700;
-      border-radius: 10px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #ffea70;
-      transform: scale(1.05);
-    }
-
-    .credit {
-      margin-top: 40px;
-      font-size: 18px;
+    /* Language switch */
+    .lang-switch {
+      position: fixed;
+      bottom: 15px;
+      right: 20px;
+      font-size: 14px;
       opacity: 0.8;
+    }
+
+    .lang-switch a {
+      color: #ffd700;
+      text-decoration: none;
+      margin: 0 4px;
+    }
+
+    .lang-switch a:hover {
+      text-shadow: 0 0 6px #ffd700;
     }
   </style>
 </head>
 
 <body>
 
-<header>
-  <h2>Mango Time</h2>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="vision.html">Vision</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <div>
+    <h1>Mango Time 🚀</h1>
+    <p>Discover the future of technology</p>
+  </div>
 
-<div class="container">
-  <h1>Welcome to Mango Time 🚀</h1>
-  <p>Discover the future of technology</p>
-
-  <a href="about.html" class="btn">About</a>
-  <a href="vision.html" class="btn">Vision</a>
-  <a href="contact.html" class="btn">Contact</a>
-
-  <div class="credit">Created by hsjaze</div>
-</div>
+  <!-- Language Switcher -->
+  <div class="lang-switch">
+    <a href="#">EN</a> |
+    <a href="#">TR</a> |
+    <a href="#">ES</a>
+  </div>
 
 </body>
 </html>
