--- a/index.html
+++ b/index.html
@@ -10,31 +10,110 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #000;
-      color: #fff;
+      color: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       text-align: center;
+      padding: 20px;
     }
 
-    h1 {
-      font-size: 56px;
+    /* HEADER */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px 20px;
+      z-index: 1000;
+    }
+
+    header h2 {
+      margin: 0;
+      font-size: 22px;
+      color: #ffd700;
+      animation: neon 1.8s infinite alternate;
+    }
+
+    @keyframes neon {
+      from {
+        text-shadow: 0 0 6px #ffd700;
+        opacity: 0.7;
+      }
+      to {
+        text-shadow:
+          0 0 10px #ffd700,
+          0 0 20px #ffb700,
+          0 0 35px #ff9f00;
+        opacity: 1;
+      }
+    }
+
+    nav {
+      display: flex;
+      gap: 16px;
+    }
+
+    nav a {
+      color: #f5f5f5;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    nav a:hover {
       color: #ffd700;
     }
 
-    p {
-      font-size: 24px;
-      margin-top: 15px;
+    /* CONTENT */
+    .container {
+      max-width: 90%;
     }
 
-    /* Language switch */
+    h1 {
+      font-size: clamp(42px, 6vw, 72px);
+      color: #ffd700;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: clamp(20px, 3vw, 30px);
+      margin-bottom: 40px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin: 10px;
+      padding: 14px 36px;
+      font-size: 20px;
+      color: #000;
+      background: #ffd700;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #ffea70;
+      transform: scale(1.05);
+    }
+
+    .credit {
+      margin-top: 40px;
+      font-size: 18px;
+      opacity: 0.8;
+    }
+
+    /* Language switch (struktur, deaktiv) */
     .lang-switch {
       position: fixed;
       bottom: 15px;
       right: 20px;
       font-size: 14px;
-      opacity: 0.8;
+      opacity: 0.7;
     }
 
     .lang-switch a {
@@ -51,17 +130,32 @@
 
 <body>
 
-  <div>
-    <h1>Mango Time 🚀</h1>
-    <p>Discover the future of technology</p>
-  </div>
+<header>
+  <h2>Mango Time</h2>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="vision.html">Vision</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <!-- Language Switcher -->
-  <div class="lang-switch">
-    <a href="#">EN</a> |
-    <a href="#">TR</a> |
-    <a href="#">ES</a>
-  </div>
+<div class="container">
+  <h1>Welcome to Mango Time 🚀</h1>
+  <p>Discover the future of technology</p>
+
+  <a href="about.html" class="btn">About</a>
+  <a href="vision.html" class="btn">Vision</a>
+  <a href="contact.html" class="btn">Contact</a>
+
+  <div class="credit">Created by hsjaze</div>
+</div>
+
+<div class="lang-switch">
+  <a href="#">EN</a> |
+  <a href="#">TR</a> |
+  <a href="#">ES</a>
+</div>
 
 </body>
 </html>
