Refactor index.html for improved layout and styles
Updated HTML structure and styles for better layout and functionality.

--- a/index.html
+++ b/index.html
@@ -1,161 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mango Time</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mango Time</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #f5f5f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      padding: 20px;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #0b0b0b;
+  color: white;
+}
 
-    /* HEADER */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 20px;
-      z-index: 1000;
-    }
+/* ===== HEADER ===== */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 40px;
+}
 
-    header h2 {
-      margin: 0;
-      font-size: 22px;
-      color: #ffd700;
-      animation: neon 1.8s infinite alternate;
-    }
+.logo {
+  font-size: 26px;
+  font-weight: 600;
+  color: #00fff7;
+  text-shadow: 0 0 8px #00fff7;
+}
 
-    @keyframes neon {
-      from {
-        text-shadow: 0 0 6px #ffd700;
-        opacity: 0.7;
-      }
-      to {
-        text-shadow:
-          0 0 10px #ffd700,
-          0 0 20px #ffb700,
-          0 0 35px #ff9f00;
-        opacity: 1;
-      }
-    }
+nav a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+}
 
-    nav {
-      display: flex;
-      gap: 16px;
-    }
+nav a:hover {
+  color: #00fff7;
+}
 
-    nav a {
-      color: #f5f5f5;
-      text-decoration: none;
-      font-size: 16px;
-    }
+/* ===== LANGUAGE SWITCH ===== */
+.lang {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+}
 
-    nav a:hover {
-      color: #ffd700;
-    }
+.lang button {
+  background: transparent;
+  border: 1px solid #00fff7;
+  color: #00fff7;
+  margin-left: 5px;
+  cursor: pointer;
+}
 
-    /* CONTENT */
-    .container {
-      max-width: 90%;
-    }
+/* ===== SECTIONS ===== */
+section {
+  padding: 70px 40px;
+  max-width: 900px;
+  margin: auto;
+}
 
-    h1 {
-      font-size: clamp(42px, 6vw, 72px);
-      color: #ffd700;
-      margin-bottom: 20px;
-    }
+h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
 
-    p {
-      font-size: clamp(20px, 3vw, 30px);
-      margin-bottom: 40px;
-    }
+h2 {
+  font-size: 26px;
+  margin-bottom: 15px;
+}
 
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 14px 36px;
-      font-size: 20px;
-      color: #000;
-      background: #ffd700;
-      border-radius: 10px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #ffea70;
-      transform: scale(1.05);
-    }
-
-    .credit {
-      margin-top: 40px;
-      font-size: 18px;
-      opacity: 0.8;
-    }
-
-    /* Language switch (struktur, deaktiv) */
-    .lang-switch {
-      position: fixed;
-      bottom: 15px;
-      right: 20px;
-      font-size: 14px;
-      opacity: 0.7;
-    }
-
-    .lang-switch a {
-      color: #ffd700;
-      text-decoration: none;
-      margin: 0 4px;
-    }
-
-    .lang-switch a:hover {
-      text-shadow: 0 0 6px #ffd700;
-    }
-  </style>
+p {
+  opacity: 0.85;
+  line-height: 1.6;
+}
+</style>
 </head>
 
 <body>
 
 <header>
-  <h2>Mango Time</h2>
+  <div class="logo" data-key="logo">Mango Time</div>
+
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="vision.html">Vision</a>
-    <a href="contact.html">Contact</a>
+    <a href="#home" data-key="navHome">Home</a>
+    <a href="#about" data-key="navAbout">About</a>
+    <a href="#vision" data-key="navVision">Vision</a>
+    <a href="#contact" data-key="navContact">Contact</a>
   </nav>
 </header>
 
-<div class="container">
-  <h1>Welcome to Mango Time 🚀</h1>
-  <p>Discover the future of technology</p>
+<!-- HOME -->
+<section id="home">
+  <h1 data-key="homeTitle">Think Future. Live Now.</h1>
+  <p data-key="homeText">
+    Mango Time is a future-focused technology brand created to shape digital experiences.
+  </p>
+</section>
 
-  <a href="about.html" class="btn">About</a>
-  <a href="vision.html" class="btn">Vision</a>
-  <a href="contact.html" class="btn">Contact</a>
+<!-- ABOUT -->
+<section id="about">
+  <h2 data-key="aboutTitle">About Mango Time</h2>
+  <p data-key="aboutText">
+    Mango Time is a modern tech initiative focused on innovation, creativity, and global vision.
+  </p>
+</section>
 
-  <div class="credit">Created by hsjaze</div>
+<!-- VISION -->
+<section id="vision">
+  <h2 data-key="visionTitle">Our Vision</h2>
+  <p data-key="visionText">
+    Our vision is to build digital products that connect people with the future.
+  </p>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2 data-key="contactTitle">Contact</h2>
+  <p data-key="contactText">
+    For collaborations and ideas, reach out to Mango Time.
+  </p>
+</section>
+
+<!-- LANGUAGE BUTTONS -->
+<div class="lang">
+  <button onclick="setLang('en')">EN</button>
+  <button onclick="setLang('tr')">TR</button>
+  <button onclick="setLang('es')">ES</button>
 </div>
 
-<div class="lang-switch">
-  <a href="#">EN</a> |
-  <a href="#">TR</a> |
-  <a href="#">ES</a>
-</div>
+<script>
+const translations = {
+  en: {
+    logo: "Mango Time",
+    navHome: "Home",
+    navAbout: "About",
+    navVision: "Vision",
+    navContact: "Contact",
+    homeTitle: "Think Future. Live Now.",
+    homeText: "Mango Time is a future-focused technology brand created to shape digital experiences.",
+    aboutTitle: "About Mango Time",
+    aboutText: "Mango Time is a modern tech initiative focused on innovation, creativity, and global vision.",
+    visionTitle: "Our Vision",
+    visionText: "Our vision is to build digital products that connect people with the future.",
+    contactTitle: "Contact",
+    contactText: "For collaborations and ideas, reach out to Mango Time."
+  },
+
+  tr: {
+    logo: "Mango Time",
+    navHome: "Ana Sayfa",
+    navAbout: "Hakkında",
+    navVision: "Vizyon",
+    navContact: "İletişim",
+    homeTitle: "Geleceği Düşün. Şimdi Yaşa.",
+    homeText: "Mango Time, dijital deneyimleri şekillendirmek için oluşturulmuş teknoloji markasıdır.",
+    aboutTitle: "Mango Time Hakkında",
+    aboutText: "Mango Time, yenilik ve yaratıcılığa odaklanan modern bir teknoloji girişimidir.",
+    visionTitle: "Vizyonumuz",
+    visionText: "İnsanları gelecekle buluşturan dijital ürünler geliştirmek.",
+    contactTitle: "İletişim",
+    contactText: "İş birlikleri için Mango Time ile iletişime geçin."
+  },
+
+  es: {
+    logo: "Mango Time",
+    navHome: "Inicio",
+    navAbout: "Sobre",
+    navVision: "Visión",
+    navContact: "Contacto",
+    homeTitle: "Piensa en el futuro. Vive ahora.",
+    homeText: "Mango Time es una marca tecnológica enfocada en el futuro.",
+    aboutTitle: "Sobre Mango Time",
+    aboutText: "Mango Time es una iniciativa tecnológica moderna centrada en la innovación.",
+    visionTitle: "Nuestra Visión",
+    visionText: "Crear productos digitales que conecten a las personas con el futuro.",
+    contactTitle: "Contacto",
+    contactText: "Para colaboraciones, contacta con Mango Time."
+  }
+};
+
+function setLang(lang) {
+  document.querySelectorAll("[data-key]").forEach(el => {
+    el.textContent = translations[lang][el.dataset.key];
+  });
+}
+</script>
 
 </body>
 </html>
